--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "@headlessui/react": "^2.2.2",
     "axios": "^1.8.4",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.506.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
