--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.6.3",
+    "framer-motion": "^12.9.7",
     "gsap": "^3.12.7",
     "lucide-react": "^0.506.0",
     "next": "15.2.4",
