--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "font-awesome": "^4.7.0",
@@ -17,8 +18,10 @@
     "gsap": "^3.12.7",
     "lucide-react": "^0.506.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
