--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ DB_USER=u60hudypcvlit955
 DB_PASSWORD=TdDApHtDP5I1nJDym8BM
 DB_NAME=beezobrluipxukqrmscz
 PORT=8080
+DB_PORT=3306
 JWT_ACCESS_SECRET=your_access_secret_key_123
 JWT_REFRESH_SECRET=your_refresh_secret_key_456
 ACCESS_TOKEN_EXPIRES_IN=15m
