--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "font-awesome": "^4.7.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.9.7",
     "gsap": "^3.12.7",
     "lucide-react": "^0.506.0",
@@ -23,7 +24,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
