--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,14 +2,25 @@
   "compilerOptions": {
     "baseUrl": "src",
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-   "paths": {
-  "@/*": ["*"],
-  "@/components/*": ["components/*"],
-  "@/assets/*": ["assets/*"],
-  "@/src/*": ["src/*"]
-}
-,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "paths": {
+      "@/*": [
+        "*"
+      ],
+      "@/components/*": [
+        "components/*"
+      ],
+      "@/assets/*": [
+        "assets/*"
+      ],
+      "@/src/*": [
+        "src/*"
+      ]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -20,11 +31,27 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx", // Updated for React 19
+    "jsx": "preserve", // Updated for React 19
     "incremental": true,
-    "plugins": [{ "name": "next" }],
-    "types": ["jest", "@testing-library/jest-dom", "react", "react-dom"]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "types": [
+      "jest",
+      "@testing-library/jest-dom",
+      "react",
+      "react-dom"
+    ]
   },
-  "include": ["src/**/*", "next-env.d.ts", ".next/types/**/*.ts", "src/global.d.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "src/global.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
