--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+   "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
@@ -42,18 +42,19 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.0",
+    "jest": "^29.5.0",
     "node-mocks-http": "^1.17.2",
     "postcss": "^8.5.3",
     "supertest": "^7.1.1",
     "tailwindcss": "^4.1.3",
-    "ts-jest": "^29.4.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "whatwg-fetch": "^3.6.20"
   },
   "jest": {
    "testEnvironment": "jsdom",
-  "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+  "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"],
   "transform": {
     "^.+\\.(ts|tsx|js|jsx)$": "ts-jest"
   },
