fixed supplement form

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,11 @@
-DB_HOST=beezobrluipxukqrmscz-mysql.services.clever-cloud.com
+DB_HOST=beezobrluipxukqrmscz-mysql.services.clever-cloud.com 
+# //localhost
 DB_USER=u60hudypcvlit955
+# //root
 DB_PASSWORD=TdDApHtDP5I1nJDym8BM
+# //""
 DB_NAME=beezobrluipxukqrmscz
+# //fitness_web
 PORT=8080
 DB_PORT=3306
 JWT_ACCESS_SECRET=your_access_secret_key_123
